[package]
name = "pyav"
version = "0.2.9"
edition = "2021"

[lib]
name = "pyav"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.25"
pyo3 = { version = "0.25", features = ["extension-module"] }
ndarray = { version = "0.16", features = ["rayon"] }
tokio = { version = "1.47", features = ["full"] }
ffmpeg-next = "7.1"
env_logger = "0.11"
log = "0.4"
yuv = "0.8"
once_cell = "1.21"

[features]
default = ["ffmpeg_6_0"]
ffmpeg_6_0 = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
